# experiments

./: .gitignore  README.md  column_order.cpp
GoLang/gpgopenid/: enigform.html  login.html  openid.go
OpenCL/FirstTry/: CMakeLists.txt  FindOpenCL.cmake  main.cpp  run.sh  vector_addition.cl
OpenCL/vanity/: CMakeLists.txt  FindOpenCL.cmake  main.cpp  main.h
ai-class-nlp/: CMakeLists.txt  rotation_cypher.cpp
docker/: CMakeLists.txt  Dockerfile  docker.tex  jaxx.sh
enable_if/: CMakeLists.txt  enable_if_test.cpp
initializerlists/: CMakeLists.txt  README.md  constructor.cpp  container_11.cpp  container_98.cpp  initializerlists.tex  map_interface.h  named_initializerlists.cpp  named_initializerlists2.cpp  notes.txt  realworld.h  realworld11initializerlist.cpp  realworld11lambda.cpp  realworld98.cpp  std_initializer_list.cpp  std_initializer_list.h  sutter1.cpp  sutter2.cpp
trustworthy_software/: CMakeLists.txt  small_backdoor.c  trustworthy_software.tex
