CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(OpenCL-First-Try)
SET(CMAKE_MODULE_PATH ${OpenCL-Getting-Started_SOURCE_DIR})

FIND_PACKAGE(OpenCL REQUIRED)
#FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost 1.42 COMPONENTS system filesystem REQUIRED)

# as long as CL/cl.hpp is in the project dir...
INCLUDE_DIRECTORIES(${OpenCL-Getting-Started_SOURCE_DIR})

INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})
#INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})

LINK_DIRECTORIES(${OpenCL_LIB_DIRS})

ADD_EXECUTABLE(opencl_primer
	main.cpp
)

TARGET_LINK_LIBRARIES(opencl_primer
	${Boost_SYSTEM_LIBRARY}
	${Boost_FILESYSTEM_LIBRARY}
	${OPENCL_LIBRARIES}
)


