CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(OpenCL-First-Try)
SET(CMAKE_MODULE_PATH ${OpenCL-First-Try_SOURCE_DIR})

FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(Boost 1.42 COMPONENTS system filesystem REQUIRED)

# as long as CL/cl.hpp is in the project dir...
INCLUDE_DIRECTORIES(${OpenCL-First-Try_SOURCE_DIR})
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})

LINK_DIRECTORIES(${OpenCL_LIB_DIRS})

SET(CMAKE_CXX_FLAGS "-std=c++0x")

ADD_EXECUTABLE(vanity
	main.cpp
)

TARGET_LINK_LIBRARIES(vanity
	${Boost_SYSTEM_LIBRARY}
	${Boost_FILESYSTEM_LIBRARY}
	${OPENCL_LIBRARIES}
)


